# b4s

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: model-catalog.md  release.md
docs/protocol/: bp1-pro-anc.md  models-catalog.md  overview.md
docs/re/: README.md  findings-2.14.1.md  scan_apk_strings.py
docs/superpowers/plans/: 2026-07-21-baseus-full-companion.md  2026-07-21-model-profile-flow.md  2026-07-22-apk-style-model-profile-refactor.md
scripts/: bump-version.mjs  release.mjs
src/: App.tsx  index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/catalog/models/: bass-bp1-pro.json
src-tauri/icons/: icon.icns
src-tauri/src/: ble.rs  capture.rs  lib.rs  main.rs
src-tauri/src/ble/: handshake.rs
src-tauri/src/catalog/: mod.rs  types.rs
src-tauri/src/device/: initialization.rs  mod.rs  registry.rs
src-tauri/src/protocol/: advertisement.rs  bp1_pro.rs  crc_table.rs  framing.rs  mod.rs  models.rs  router.rs  types.rs  wrap_v2.rs
src/components/: AncControl.tsx  Battery.tsx  BlePairing.tsx  CaptureStudio.tsx  ConfirmDialog.tsx  DeviceHeader.tsx  EqCards.tsx  EqPanel.tsx  GameModeToggle.tsx  HomePanel.tsx  Icons.tsx  ListeningPanel.tsx  MorePanel.tsx  Settings.tsx  ToastHost.tsx
src/lib/: app.ts  ble.ts  capture.ts  device.ts  deviceImages.ts  eq.ts  tauri.ts  theme.ts  toast.ts
src/styles/: _base.scss  _mixins.scss  _variables.scss  main.scss
src/styles/components/: _anc.scss  _battery.scss  (+10 more)
(+1 files in other folders)
