[package]
name = "baseus-app"
version = "0.1.0"
description = "Baseus Desktop App - Control your Baseus earbuds"
authors = ["you"]
edition = "2021"

[lib]
name = "baseus_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
btleplug = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
once_cell = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
